fix: featured post controls contrast

--- a/apps/frontend/src/app/modules/home/components/featured-post/featured-post.component.scss
+++ b/apps/frontend/src/app/modules/home/components/featured-post/featured-post.component.scss
@@ -144,12 +144,12 @@
     display: inline-block;
 
     .inner {
-      width: 5px;
-      height: 5px;
+      width: 3px;
+      height: 3px;
       margin: 0 auto;
       vertical-align: middle;
       border-radius: 50%;
-      background: #ccc;
+      background: #949494;
       display: inline-block;
       transition: background 300ms;
     }
